--- a/package.json
+++ b/package.json
@@ -15,11 +15,19 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "firebase": "^9.22.2",
+    "firebase-admin": "^11.9.0",
     "next": "13.4.4",
+    "next-connect": "^1.0.0-next.4",
+    "next-firebase-auth": "^1.0.0-canary.22",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "prisma": "^4.15.0"
   }
 }
