--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
+    "classnames": "^2.3.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.22.2",
@@ -20,7 +25,7 @@
     "next": "13.4.4",
     "next-connect": "^1.0.0-next.4",
     "next-firebase-auth": "^1.0.0-canary.22",
-    "postcss": "8.4.24",
+    "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
@@ -28,6 +33,19 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "prisma": "^4.15.0"
+    "@storybook/addon-essentials": "^7.0.20",
+    "@storybook/addon-interactions": "^7.0.20",
+    "@storybook/addon-links": "^7.0.20",
+    "@storybook/addon-styling": "^1.1.0",
+    "@storybook/blocks": "^7.0.20",
+    "@storybook/builder-vite": "^7.0.20",
+    "@storybook/nextjs": "^7.0.20",
+    "@storybook/react": "^7.0.20",
+    "@storybook/react-vite": "^7.0.20",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "eslint-plugin-storybook": "^0.6.12",
+    "prisma": "^4.15.0",
+    "storybook": "^7.0.20",
+    "vite": "^4.3.9"
   }
 }
