--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
@@ -20,6 +21,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "final-form": "^4.20.9",
     "firebase": "^9.22.2",
     "firebase-admin": "^11.9.0",
     "next": "13.4.4",
@@ -28,6 +30,7 @@
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-final-form": "^6.5.9",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "zod": "^3.21.4"
