--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^4.15.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "^10.4.14",
+    "boring-avatars": "^1.10.0",
     "classnames": "^2.3.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
@@ -28,6 +30,7 @@
     "next": "13.4.4",
     "next-connect": "^1.0.0-next.4",
     "next-firebase-auth": "^1.0.0-canary.22",
+    "nice-color-palettes": "^3.0.0",
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
